change the color of the button

--- a/app/src/main/res/drawable/shape.xml
+++ b/app/src/main/res/drawable/shape.xml
@@ -9,12 +9,12 @@
         android:top="5dp"
         />
 
-    <corners android:radius="10dp" />
+    <corners android:radius="25dp" />
 
     <stroke
         android:width="2px"
-        android:color="#FFFFFF" />
+        android:color="#000000" />
 
-    <solid android:color="#FFFFFF" />
+    <solid android:color="#000000" />
 
 </shape>
