--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -80,8 +80,12 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginBottom="25dp"
-        android:layout_weight="1"
-        android:text="Button" />
+        android:layout_weight="0.8"
+        android:background="@drawable/shape"
+        android:backgroundTint="#000000"
+        android:text="Sign in"
+        android:textColor="@color/white"
+        app:rippleColor="@color/black" />
 
     <LinearLayout
         android:id="@+id/orItem"
