--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/inputPsw"
+    android:id="@+id/Layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -15,77 +15,107 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginTop="140dp"
-        android:layout_marginBottom="110dp"
+        android:layout_marginBottom="100dp"
         android:layout_weight="1"
         android:text="Sign up"
+        android:textColor="@color/black"
         android:textSize="42sp"
         android:textStyle="bold" />
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:layout_marginBottom="20dp"
+        app:cardCornerRadius="20dp"
+        app:cardElevation="4dp">
 
         <LinearLayout
             android:id="@+id/inputName"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="25dp"
             android:divider="?attr/dividerVertical"
             android:dividerPadding="10dp"
             android:orientation="horizontal"
-            android:showDividers="middle"
-            android:layout_marginBottom="20dp">
+            android:showDividers="middle">
 
             <ImageView
                 android:id="@+id/nameImg"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                app:srcCompat="@mipmap/ic_launcher_round" />
+                android:layout_margin="10dp"
+                app:srcCompat="@drawable/account" />
 
             <EditText
                 android:id="@+id/editTextTextPersonName"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="3"
+                android:layout_weight="7"
+                android:layout_marginLeft="8dp"
                 android:ems="10"
-                android:text="Name" />
+                android:hint="input name please" />
         </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
-    <LinearLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:divider="?attr/dividerVertical"
-        android:dividerPadding="10dp"
-        android:orientation="horizontal"
-        android:showDividers="middle"
-        android:layout_marginBottom="70dp">
+        android:layout_marginBottom="70dp"
+        app:cardCornerRadius="20dp"
+        app:cardElevation="4dp">
 
-        <ImageView
-            android:id="@+id/psdImg"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:id="@+id/inputPsw"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            app:srcCompat="@mipmap/ic_launcher_round" />
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="25dp"
+            android:divider="?attr/dividerVertical"
+            android:dividerPadding="10dp"
+            android:orientation="horizontal"
+            android:showDividers="middle">
 
-        <EditText
-            android:id="@+id/Password"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="3"
-            android:text="password"
-            android:inputType="textPassword" />
+            <ImageView
+                android:id="@+id/psdImg"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:layout_margin="10dp"
+                app:srcCompat="@drawable/password" />
 
-    </LinearLayout>
+            <EditText
+                android:id="@+id/Password"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="7"
+                android:layout_marginLeft="8dp"
+                android:hint="input password please" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
-    <Button
-        android:id="@+id/button"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginBottom="25dp"
         android:layout_weight="0.8"
-        android:background="@drawable/shape"
-        android:backgroundTint="#000000"
-        android:text="Sign in"
-        android:textColor="@color/white"
-        app:rippleColor="@color/black" />
+        android:layout_marginBottom="25dp"
+        app:cardCornerRadius="20dp"
+        app:cardElevation="4dp">
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/shape"
+            android:backgroundTint="#000000"
+            android:text="Sign in"
+            android:textColor="@color/white"
+            app:rippleColor="@color/black" />
+
+    </androidx.cardview.widget.CardView>
 
     <LinearLayout
         android:id="@+id/orItem"
@@ -108,8 +138,9 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:text="or"
             android:textAlignment="center"
-            android:text="or" />
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/lineRight"
@@ -126,20 +157,21 @@
         android:id="@+id/images"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_weight="0.5
+"
         android:orientation="horizontal">
 
         <View
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1.5"/>
+            android:layout_weight="3"/>
 
         <ImageView
             android:id="@+id/imageView1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            app:srcCompat="@mipmap/ic_launcher_round" />
+            app:srcCompat="@drawable/wechat" />
 
         <ImageView
             android:id="@+id/imageView2"
@@ -148,19 +180,19 @@
             android:layout_weight="1"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            app:srcCompat="@mipmap/ic_launcher" />
+            app:srcCompat="@drawable/facebook" />
 
         <ImageView
             android:id="@+id/imageView3"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            app:srcCompat="@mipmap/ic_launcher" />
+            app:srcCompat="@drawable/google" />
 
         <View
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1.5"/>
+            android:layout_weight="3"/>
 
     </LinearLayout>
 
