--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,10 +53,11 @@
                 android:id="@+id/editTextTextPersonName"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="7"
                 android:layout_marginLeft="8dp"
+                android:layout_weight="7"
                 android:ems="10"
-                android:hint="input name please" />
+                android:hint="input name please"
+                android:singleLine="false" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
