--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -20,14 +20,19 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
+            <View
+                android:id="@+id/view6"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="3" />
+
             <TextView
-                android:id="@+id/sign"
+                android:id="@+id/welcome"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
-                android:layout_marginTop="140dp"
                 android:layout_marginBottom="10dp"
                 android:layout_weight="1"
-                android:text="Sign up"
+                android:text="Welcome"
                 android:textColor="@color/black"
                 android:textSize="42sp"
                 android:textStyle="bold" />
@@ -35,7 +40,6 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_marginBottom="100dp"
                 android:layout_weight="1"
                 android:orientation="horizontal">
 
@@ -43,7 +47,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="3"
-                    android:text= "@string/sentence"
+                    android:text="@string/sentence"
                     android:textColor="@color/black"
                     android:textSize="22sp" />
 
@@ -54,6 +58,12 @@
                     android:layout_weight="2" />
             </LinearLayout>
 
+            <View
+                android:id="@+id/view5"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1.5" />
+
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
@@ -61,6 +71,12 @@
                 android:layout_weight="1"
                 app:cardCornerRadius="25dp"
                 app:cardElevation="4dp">
+
+                <View
+                    android:id="@+id/view4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="0.8" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -78,7 +94,7 @@
                 android:id="@+id/view"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
-                android:layout_weight="0.8" />
+                android:layout_weight="0.5" />
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -93,7 +109,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@color/white"
-                    android:textColor="@color/black"
+                    android:textColor="@color/gray"
                     android:text="choose from gallery"
                     android:textAlignment="center"
                     android:gravity="center"
@@ -104,7 +120,7 @@
             <View
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
-                android:layout_weight="6" />
+                android:layout_weight="5" />
 
         </LinearLayout>
 
