--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -117,15 +117,17 @@
             app:cardCornerRadius="20dp"
             app:cardElevation="4dp">
 
-            <Button
+            <TextView
                 android:id="@+id/signInBt"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/shape"
+                android:background="@color/black"
                 android:onClick="onClickButtonStart"
                 android:text="Sign in"
+                android:textAlignment="center"
+                android:gravity="center"
                 android:textColor="@color/white"
-                app:rippleColor="@color/black" />
+                android:textSize="18sp"/>
 
         </androidx.cardview.widget.CardView>
 
