--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,25 +12,33 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
-        android:layout_marginLeft="40dp"
         android:layout_marginEnd="40dp"
-        android:layout_marginRight="40dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <View
+            android:id="@+id/view10"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="3" />
+
         <TextView
             android:id="@+id/sign"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:layout_marginTop="140dp"
-            android:layout_marginBottom="100dp"
             android:layout_weight="1"
             android:text="Sign up"
             android:textColor="@color/black"
             android:textSize="42sp"
             android:textStyle="bold" />
+
+        <View
+            android:id="@+id/view11"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2" />
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
@@ -74,7 +82,7 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginBottom="70dp"
+            android:layout_marginBottom="80dp"
             android:layout_weight="1"
             app:cardCornerRadius="20dp"
             app:cardElevation="4dp">
@@ -112,7 +120,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginBottom="25dp"
-            android:layout_weight="0.8"
+            android:layout_weight="1"
             android:background="@color/black"
             app:cardCornerRadius="20dp"
             app:cardElevation="4dp">
@@ -122,12 +130,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/black"
+                android:gravity="center"
                 android:onClick="onClickButtonStart"
                 android:text="Sign in"
                 android:textAlignment="center"
-                android:gravity="center"
                 android:textColor="@color/white"
-                android:textSize="18sp"/>
+                android:textSize="18sp" />
 
         </androidx.cardview.widget.CardView>
 
@@ -213,7 +221,7 @@
         <View
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:layout_weight="1.2" />
+            android:layout_weight="2" />
 
         <LinearLayout
             android:id="@+id/create"
@@ -230,7 +238,8 @@
                 android:layout_weight="1"
                 android:text="Do not have an account?"
                 android:textAlignment="textEnd"
-                android:textSize="12dp" />
+                android:textColor="@color/gray"
+                android:textSize="13sp" />
 
             <TextView
                 android:id="@+id/createNew"
@@ -241,7 +250,7 @@
                 android:text="Create a new account"
                 android:textAlignment="textStart"
                 android:textColor="@color/black"
-                android:textSize="12dp" />
+                android:textSize="12sp" />
         </LinearLayout>
     </LinearLayout>
 
