upload some images and rebuild the effect page

--- a/app/src/main/res/layout/activity_effect.xml
+++ b/app/src/main/res/layout/activity_effect.xml
@@ -152,7 +152,7 @@
                         android:id="@+id/textView5"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_marginStart="30dp"
+                        android:layout_marginStart="40dp"
                         android:layout_weight="3"
                         android:gravity="center"
                         android:text="Craft"
@@ -219,19 +219,135 @@
                             android:typeface="sans" />
                     </LinearLayout>
 
-                    <ScrollView
+                    <HorizontalScrollView
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="6">
 
                         <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
                             android:orientation="horizontal">
 
 
+                            <View
+                                android:id="@+id/view18"
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="0.28"
+                                android:background="@drawable/c1"/>
+
+                            <View
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="0.05"/>
+
+                            <View
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="0.28"
+                                android:background="@drawable/c2"/>
+
+                            <View
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="0.05"/>
+
+                            <View
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="0.28"
+                                android:background="@drawable/c3"/>
+
+                            <View
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="0.05"/>
+
+                            <View
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="0.28"
+                                android:background="@drawable/c4"/>
+
+                            <View
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="0.05"/>
+
+                            <View
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="0.28"
+                                android:background="@drawable/c5"/>
+
+                            <View
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="0.05"/>
+
+                            <View
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="0.28"
+                                android:background="@drawable/c6"/>
+
+                            <View
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="0.05"/>
+
+                            <View
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="0.28"
+                                android:background="@drawable/c7"/>
+
+                            <View
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="0.05"/>
+
+                            <View
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="0.28"
+                                android:background="@drawable/c8"/>
+
+                            <View
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="0.05"/>
+
+                            <View
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="0.28"
+                                android:background="@drawable/c9"/>
+
+                            <View
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="0.05"/>
+
+                            <View
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="0.28"
+                                android:background="@drawable/c10"/>
+
+                            <View
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="0.05"/>
+
+                            <View
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="0.28"
+                                android:background="@drawable/c11"/>
                         </LinearLayout>
-                    </ScrollView>
+                    </HorizontalScrollView>
                 </LinearLayout>
 
             </LinearLayout>
